# test_opengl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
include/glad/glad/: glad.h
src/: main.cpp
src/glad/: glad.c
